[package]
name = "breeze-cli"
version = "0.1.0"
edition = "2024"

[dev-dependencies]
assert_cmd = "2.0.17"
predicates = "3.1.3"
tempfile = "3.20.0"

[dependencies]
anyhow = "1.0.98"
clap = { version = "4.5.41", features = ["derive"] }
crossterm = { version = "0.28.1", features = ["use-dev-tty"] }
ratatui = "0.29.0"
thiserror = "2.0.12"
